[package]
name = "flipper-snake-rs"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "flipper-snake-rs"
bench = false
test = false

[dependencies]
flipperzero = "0.3.1"
flipperzero-rt = "0.3.1"
flipperzero-sys = "0.3.1"

